--- a/WebContent/pages/private/edit_personal_data.xhtml
+++ b/WebContent/pages/private/edit_personal_data.xhtml
@@ -35,7 +35,7 @@
 			<br />
 			<p:outputLabel value="#{sessionBean.loggedUser.files.get(0).size}" />
 			<br />
-			<p:outputLabel value="#{sessionBean.loggedUser.files.get(0).createdDate}" />
+			<p:outputLabel value="#{sessionBean.loggedUser.files.get(0).uploadTimestamp}" />
 			
 			
 		</h:form>
