--- a/WebContent/pages/public/sign_in.xhtml
+++ b/WebContent/pages/public/sign_in.xhtml
@@ -31,10 +31,7 @@
 						<p:password placeholder="Senha" value="#{sessionBean.user.password}" />
 					</h:panelGrid>
 					<br />
-					<h:commandButton value="Entrar" style="width: 200px"
-						action="#{sessionBean.login()}" styleClass="btn" />
-					<br />
-					<p:commandLink value="Inscreva-se aqui" action="sign_in?faces-redirect=true" style="color: gray; font-size: 80%"/>
+					<h:commandButton value="Entrar" style="width: 200px" action="#{sessionBean.login()}" styleClass="btn" />
 					<br /> <br />
 				</center>
 			</p:panel>
