--- a/WebContent/pages/private/upload_file.xhtml
+++ b/WebContent/pages/private/upload_file.xhtml
@@ -10,7 +10,7 @@
 	<!-- Conteúdo do Centro -->
 	<ui:define name="conteudo_centro">
 		<h:form>
-			<p:growl id="growl" autoUpdate="true" />
+			<p:growl id="growl" autoUpdate="true" showDetail="true" showSummary="true"/>
 
 			<p:panel>
 				<p:panel>
