--- a/WebContent/pages/public/login.xhtml
+++ b/WebContent/pages/public/login.xhtml
@@ -31,8 +31,7 @@
 						<p:password placeholder="Senha" value="#{sessionBean.user.password}" />
 					</h:panelGrid>
 					<br />
-					<h:commandButton value="Entrar" style="width: 200px"
-						action="#{sessionBean.login()}" styleClass="btn" />
+					<h:commandButton value="Entrar" style="width: 200px" action="#{sessionBean.login()}" styleClass="btn" />
 					<br />
 					<p:commandLink value="Inscreva-se aqui" action="sign_in?faces-redirect=true" style="color: gray; font-size: 80%"/>
 					<br /> <br />
