--- a/WebContent/pages/public/login.xhtml
+++ b/WebContent/pages/public/login.xhtml
@@ -33,7 +33,7 @@
 					<br />
 					<h:commandButton value="Entrar" style="width: 200px" action="#{sessionBean.login()}" styleClass="btn" />
 					<br />
-					<p:commandLink value="Inscreva-se aqui" action="sign_in?faces-redirect=true" style="color: gray; font-size: 80%"/>
+					<p:commandLink value="Inscreva-se aqui" action="sign_up?faces-redirect=true" style="color: gray; font-size: 80%"/>
 					<br /> <br />
 				</center>
 			</p:panel>
