--- a/WebContent/pages/public/sign_up_success.xhtml
+++ b/WebContent/pages/public/sign_up_success.xhtml
@@ -6,11 +6,10 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<h:outputStylesheet library="css" name="error.css" />
+	<h:outputStylesheet library="css" name="login.css" />
 </h:head>
 
 <h:body>
-	
 	<div class="centered">
 		<h:form>
 			<p:growl id="growl" autoUpdate="true" />
@@ -18,9 +17,7 @@
 				<center>
 					<br /> <br />
 					<h:graphicImage value="/resources/img/logo_bionimbuz.jpg" />
-					<br /> <br /> <br />
-						Erro
-					<br /> <br /> <br />
+					<br /> <br /> <br /> Cadastro efetuado com sucesso!
 				</center>
 			</p:panel>
 		</h:form>
