--- a/WebContent/pages/public/login.xhtml
+++ b/WebContent/pages/public/login.xhtml
@@ -1,43 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-	<h:outputStylesheet library="css" name="login.css" />
-</h:head>
+    <h:head>
+        <h:outputStylesheet library="css" name="login.css" />
+    </h:head>
 
-<h:body>
-	
-	<h:panelGroup layout="block" styleClass="error-header" rendered="#{param.error}">
-		<center>
-			Usuário/Senha incorretos
-		</center>
-	</h:panelGroup>
+    <h:body>
 
-	<div class="centered">
-		<h:form>
-			<p:growl id="growl" autoUpdate="true" />
-			<p:panel styleClass="LoginPanel">
-				<center>
-					<br /> <br />
-					<h:graphicImage value="/resources/img/logo_bionimbuz.jpg" />
-					<br /> <br /> <br />
-					<h:panelGrid columns="2" cellpadding="4" >
-						<p:inputText placeholder="Login" value="#{sessionBean.user.login}" />
-						<br />
-						<p:password placeholder="Senha" value="#{sessionBean.user.password}" />
-					</h:panelGrid>
-					<br />
-					<h:commandButton value="Entrar" style="width: 200px" action="#{sessionBean.login()}" styleClass="btn" />
-					<br />
-					<p:commandLink value="Inscreva-se aqui" action="sign_up?faces-redirect=true" style="color: gray; font-size: 80%"/>
-					<br /> <br />
-				</center>
-			</p:panel>
-		</h:form>
-	</div>
-</h:body>
+        <!-- User not found -->
+        <h:panelGroup layout="block" styleClass="user-not-found" rendered="#{param.not_found}">
+            <center>
+                Usuário/Senha incorretos
+            </center>
+        </h:panelGroup>
+
+        <!-- Internal server error -->
+        <h:panelGroup layout="block" styleClass="internal-error" rendered="#{param.internal_error}">
+            <center>
+                Erro interno do servidor
+            </center>
+        </h:panelGroup>
+
+        <div class="centered">
+            <h:form>
+                <p:growl id="growl" autoUpdate="true" />
+                <p:panel styleClass="login-panel">
+                    <center>
+                        <br /> <br />
+                        <h:graphicImage value="/resources/img/logo_bionimbuz.jpg" />
+                        <br /> <br /> <br />
+                        <h:panelGrid columns="2" cellpadding="4" >
+                            <p:inputText placeholder="Login" value="#{sessionBean.user.login}" />
+                            <br />
+                            <p:password placeholder="Senha" value="#{sessionBean.user.password}" />
+                        </h:panelGrid>
+                        <br />
+                        <h:commandButton value="Entrar" style="width: 200px" action="#{sessionBean.login()}" styleClass="btn" />
+                        <br />
+                        <p:commandLink value="Inscreva-se aqui" action="sign_up?faces-redirect=true" style="color: gray; font-size: 80%"/>
+                        <br /> <br />
+                    </center>
+                </p:panel>
+            </h:form>
+        </div>
+    </h:body>
 </html>
