--- a/WebContent/pages/private/workflows/pipeline_composer.xhtml
+++ b/WebContent/pages/private/workflows/pipeline_composer.xhtml
@@ -150,7 +150,8 @@
                     </p:panel>
                 </p:tab>
                 <p:tab title="URL">
-                    Digite a URL de onde se encontra seu arquivo (site, URL, link do Dropbox, link do Google Drive, ...):
+                    Digite a URL de onde se encontra seu arquivo (URL de um armazenamento, link do Dropbox, link do Google Drive, ...). <br />
+                    Apontar o caminho direto para o arquivo (nao apontar pastas, por exemplo):
                     <p:inputText style="width: 99%" placeholder="http://" />
                     <br /> <br />
                     <p:commandButton value="Ok"/>
