--- a/WebContent/pages/private/files/storage.xhtml
+++ b/WebContent/pages/private/files/storage.xhtml
@@ -7,31 +7,23 @@
 
     <ui:decorate template="/resources/templates/template.xhtml">
 
-        <!-- Conteúdo do Centro -->
+        <!-- Center Content -->
         <ui:define name="conteudo_centro">
             <h:form>
-                <p:growl id="growl" autoUpdate="true" showDetail="true" showSummary="true"/>
-
-                <p:panel header="Upload de Arquivos para seu Armazenamento">
+                <p:panel header="Seu Armazenamento">
                     <p:panel>
-                        Página utilizada para realizar upload de arquivos.
+                        <p:outputLabel value="Seu armazenamento está em: "/> <br />
+                        <p:progressBar value="#{fileUploadBean.storageUsage}" labelTemplate="{value}%" displayOnly="true"/>
+                    </p:panel>
+                    <br />
+                    <p:panel header="Arquivos">
+                        Visualize aqui sua lista de arquivos enviados ao seu armazenamento
                     </p:panel>
                     <br />
                     <p:panel>
-                        <p:fileUpload id="file_upload" mode="advanced"
-                                      dragDropSupport="false" multiple="true"
-                                      invalidFileMessage="Formato de arquivo inválido"
-                                      fileUploadListener="#{fileUploadBean.handleUploadedFile}"
-                                      cancelLabel="Cancelar" uploadLabel="Enviar"
-                                      allowTypes="/(\.|\/)(txt|iso|gif|jpe?g|png)$/" label="Escolher Arquivo"
-                                      update="growl,panel" sizeLimit="268435456"/>
-                    </p:panel>
-                    <br />
-                    <p:panel id="panel">
-                        <p:dataTable value="#{sessionBean.loggedUser.files}" var="f" style="text-align: center"
-                                     rows="15" emptyMessage="Nenhum arquivo encontrado">
+                        <p:dataTable value="#{sessionBean.loggedUser.files}" var="f" style="text-align: center">
                             <f:facet name="header">Sua lista de arquivos</f:facet>
-                            <p:column headerText="Nome" width="300">
+                            <p:column headerText="Nome" width="300" >
                                 <h:outputText value="#{f.name}" />
                             </p:column>
 
@@ -43,6 +35,10 @@
                                 <h:outputText value="#{f.uploadTimestamp}" />
                             </p:column>
                         </p:dataTable>
+
+                        <f:facet name="footer">
+                            <p:commandButton value="Realizar novo Upload" action="upload_file?faces-redirect=true"/>
+                        </f:facet>
                     </p:panel>
                 </p:panel>
             </h:form>
